--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -165,13 +166,32 @@
                     <h3 class="mbr-fonts-style mbr-section-title display-2">누구나 정보를 나눌 수 있습니다.</h3>
                 </div>
             </div>
-            <div class="col-md-4 mbr-section-btn">
-                <a href="" class="btn btn-primary display-4">
-                    <span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>SEE MORE
-                </a>
+            <div class="col-md-4 mbr-section-btn"><a href="" class="btn btn-primary display-4">
+                    <span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>참여하기</a></div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-gallery mbr-slider-carousel cid-qZYyd9gbDX" id="gallery2-10" data-sortbtn="btn-primary">
+
+    
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-sm-10">
+                <h2 class="mbr-section-title mbr-fonts-styl align-center display-1">프로모션365
+                </h2>
+                <div class="underline align-center">
+                    <div class="line"></div>
+                </div>
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style pt-3 align-center display-2">생산자와 소비자 모두 승리할 수 있는 상생 비지니스 모델</h3>
             </div>
         </div>
     </div>
+    
+    <div>
+        <div class="pt-5"><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery2-10" data-slide-to="0" data-toggle="modal"><img src="assets/images/gallery00.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery2-10" data-slide-to="1" data-toggle="modal"><img src="assets/images/gallery01.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Creative"><div href="#lb-gallery2-10" data-slide-to="2" data-toggle="modal"><img src="assets/images/gallery02.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Animated"><div href="#lb-gallery2-10" data-slide-to="3" data-toggle="modal"><img src="assets/images/gallery03.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery2-10" data-slide-to="4" data-toggle="modal"><img src="assets/images/gallery04.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery2-10" data-slide-to="5" data-toggle="modal"><img src="assets/images/gallery05.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery2-10" data-slide-to="6" data-toggle="modal"><img src="assets/images/gallery06.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Animated"><div href="#lb-gallery2-10" data-slide-to="7" data-toggle="modal"><img src="assets/images/gallery07.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Type caption here</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-10"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active"><img src="assets/images/gallery00.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery01.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery02.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery03.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery04.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery05.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery06.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/gallery07.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-10"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-10"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+    </div>
+
 </section>
 
 <section class="clients cid-qZXwSpvNcs mbr-parallax-background" id="clients1-f" data-sortbtn="btn-primary">
@@ -260,7 +280,7 @@
     </div>
 </section>
 
-<div id="custom-html-s" custom-code="true" data-rv-view="993"><!-- Channel Plugin Scripts -->
+<div id="custom-html-s" custom-code="true" data-rv-view="1445"><!-- Channel Plugin Scripts -->
 <script>
   ;window.channelPluginSettings = {
     "pluginKey": "6a4a2fda-277a-4faa-8a60-fad8a0d4dba3"
@@ -353,14 +373,18 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/gallery/player.min.js"></script>
+  <script src="assets/gallery/script.js"></script>
   
   
 </body>
