--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="underline align-center">
                     <div class="line"></div>
                 </div>
-                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style pt-3 align-center display-2">커넥티드인의 상생 비지니스 모델을 만나보세요.</h3>
+                <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style pt-3 align-center display-7">커넥티드인의 상생 비지니스 모델</h3>
             </div>
         </div>
     </div>
